--- a/dev/style.css
+++ b/dev/style.css
@@ -33,3 +33,8 @@ body {
   margin: 1em;
   border-radius: 15px;
 }
+.minPokeWeightDiv {
+  max-width: 50%;
+  display: flex;
+  justify-content: space-around;
+}
