--- a/dev/style.css
+++ b/dev/style.css
@@ -34,7 +34,10 @@ body {
   border-radius: 15px;
 }
 .minPokeWeightDiv {
-  max-width: 50%;
+  border-style: solid;
+  border-width: 5px;
+  border-radius: 15px;
+  max-width: 300px;
+  margin: 1em;
   display: flex;
-  justify-content: space-around;
 }
